<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainScreen"
    android:orientation="vertical"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/american_football_scores"
        android:textColor="@color/mainTitle"
        android:textSize="24sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/teamTextView"
                android:text="@string/team_a" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/scoreView"
                android:text="0" />

            <Button
                style="@style/pointsButtonView"
                android:onClick="addOnePointToTeamA"
                android:text="@string/add_1_point" />

            <Button
                style="@style/pointsButtonView"
                android:onClick="addTwoPointToTeamA"
                android:text="@string/add_2_points" />

            <Button
                style="@style/pointsButtonView"
                android:onClick="addThreePointToTeamA"
                android:text="@string/add_3_points" />

            <Button
                style="@style/pointsButtonView"
                android:onClick="addSixPointToTeamA"
                android:text="@string/add_6_points" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/teamTextView"
                android:text="@string/team_b" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/scoreView"
                android:text="0" />

            <Button
                style="@style/pointsButtonView"
                android:onClick="addOnePointToTeamB"
                android:text="@string/add_1_point" />

            <Button
                style="@style/pointsButtonView"
                android:onClick="addTwoPointToTeamB"
                android:text="@string/add_2_points" />

            <Button
                style="@style/pointsButtonView"
                android:onClick="addThreePointToTeamB"
                android:text="@string/add_3_points" />

            <Button
                style="@style/pointsButtonView"
                android:onClick="addSixPointToTeamB"
                android:text="@string/add_6_points" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <Button
            style="@style/basicButtonView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:onClick="resetButton"
            android:text="@string/reset" />
    </LinearLayout>
</LinearLayout>
